End of section 10

--- a/client/src/app/core/nav-bar/nav-bar.component.scss
+++ b/client/src/app/core/nav-bar/nav-bar.component.scss
@@ -19,4 +19,13 @@
         color: white;
         text-align: center;
     }
+
+    a {
+        text-decoration: none;
+        color: #343a40;
+
+        &.active {
+            color: orange;
+        }
+    }
 }
