--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -1,1 +1,18 @@
-<p>home works!</p>
+<div class="home">
+    <carousel class="home__carousel">
+        <slide>
+            <img class="home__image" src="assets/images/hero1.jpg" alt="">
+        </slide>
+        <slide>
+            <img class="home__image" src="assets/images/hero2.jpg" alt="">
+        </slide>
+        <slide>
+            <img class="home__image" src="assets/images/hero3.jpg" alt="">
+        </slide>
+    </carousel>
+    <section class="home__featured">
+        <div class="d-flex justify-content-center pt-4">
+            <h1>Welcome to shop</h1>
+        </div>
+    </section>
+</div>
