--- a/client/src/app/shop/product-details/product-details.component.html
+++ b/client/src/app/shop/product-details/product-details.component.html
@@ -1,21 +1,23 @@
-<div *ngIf="product" class="product-details row">
-    <div class="col-6">
-        <img src="{{product.pictureUrl}}" class="img-fluid w-100">
-    </div>
-    <div class="col-6">
-        <h3>{{product.name}}</h3>
-        <p>{{product.price | currency}}</p>
-        <div class="d-flex justify-content-start align-items-center">
-            <i class="fa fa-minus-circle text-warning product-details__icon-minus mr-2"></i>
-            <span class="font-weight-bold product-details__number">2</span>
-            <i class="fa fa-plus-circle text-warning product-details__icon-plus mx-2"></i>
-            <button class="btn btn-outline-secondary btn-lg">Add to Cart</button>
+<div class="container mt-5">
+    <div *ngIf="product" class="product-details row">
+        <div class="col-6">
+            <img src="{{product.pictureUrl}}" class="img-fluid w-100">
         </div>
-    </div>
-    <div class="row mt-5">
-        <div class="col-12 ml-3">
-            <h4>Description</h4>
-            <p>{{product.description}} </p>
+        <div class="col-6">
+            <h3>{{product.name}}</h3>
+            <p>{{product.price | currency}}</p>
+            <div class="d-flex justify-content-start align-items-center">
+                <i class="fa fa-minus-circle text-warning product-details__icon-minus mr-2"></i>
+                <span class="font-weight-bold product-details__number">2</span>
+                <i class="fa fa-plus-circle text-warning product-details__icon-plus mx-2"></i>
+                <button class="btn btn-outline-secondary btn-lg">Add to Cart</button>
+            </div>
+        </div>
+        <div class="row mt-5">
+            <div class="col-12 ml-3">
+                <h4>Description</h4>
+                <p>{{product.description}} </p>
+            </div>
         </div>
     </div>
 </div>
