--- a/client/src/app/shop/product-item/product-item.component.scss
+++ b/client/src/app/shop/product-item/product-item.component.scss
@@ -1,7 +1,39 @@
-.btn-group {
-    width: 100%;
-}
+.product-item {
+    .btn {
+        width: 30%;
+        height: 3rem;
+    }
 
-.btn {
-    width: 50%;
+    &__image :hover {
+        opacity: 1;
+
+        & button {
+            transform: none;
+            opacity: 1;
+        }
+    }
+
+    &__hover-overlay {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        top: 0;
+        left: 0;
+        background-color: rgba(255,255,255,0.5);
+        opacity: 0;
+        transition: all .5s;
+
+        & button {
+            z-index: 1000;
+            transition: all .5s;
+        }
+
+        & button:first-of-type {
+            transform: translateX(-1rem);
+        }
+
+        & button:last-of-type {
+            transform: translateX(1rem);
+        }
+    }
 }
