--- a/client/src/app/core/nav-bar/nav-bar.component.html
+++ b/client/src/app/core/nav-bar/nav-bar.component.html
@@ -7,9 +7,11 @@
       <a class="p-2" href="#">Contact</a>
     </nav>
     <div class="d-flex align-items-center">
-        <a class="position-relative">
+        <a routerLink="/basket" class="position-relative">
             <i class="fa fa-shopping-cart fa-2x mr-5 text-dark"></i>
-            <div class="nav-bar__cart-no">5</div>
+            <div class="nav-bar__cart-no" *ngIf="(basket$ | async) as basket">
+              {{basket.items.length}}
+            </div>
         </a>
         <a class="btn btn-outline-secondary mr-2">Login</a>
         <a class="btn btn-outline-secondary mr-3">Sign up</a>
