--- a/client/src/app/shop/product-details/product-details.component.html
+++ b/client/src/app/shop/product-details/product-details.component.html
@@ -7,10 +7,10 @@
             <h3>{{product.name}}</h3>
             <p>{{product.price | currency}}</p>
             <div class="d-flex justify-content-start align-items-center">
-                <i class="fa fa-minus-circle text-warning product-details__icon-minus mr-2"></i>
-                <span class="font-weight-bold product-details__number">2</span>
-                <i class="fa fa-plus-circle text-warning product-details__icon-plus mx-2"></i>
-                <button class="btn btn-outline-secondary btn-lg">Add to Cart</button>
+                <i (click)="decrementQuantity()" class="fa fa-minus-circle text-warning product-details__icon-minus mr-2"></i>
+                <span class="font-weight-bold product-details__number">{{quantity}}</span>
+                <i (click)="incrementQuantity()" class="fa fa-plus-circle text-warning product-details__icon-plus mx-2"></i>
+                <button (click)="addItemToBasket()" class="btn btn-outline-secondary btn-lg">Add to Cart</button>
             </div>
         </div>
         <div class="row mt-5">
